Deleting user's profile photo
