# src/docs/swagger.yaml
@@ -996,3 +996,62 @@ paths:
                   message:
                     type: string
                     example: error message
+
+  /users/profile/photo/delete:
+    delete:
+      tags:
+        - User
+      summary: A logged in user can delete his profile photo, only if photo is present
+      responses:
+        200:
+          description: success, Removed user's profile photo
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  message:
+                    type: string
+                    example: Deleted user's profile photo
+        400:
+          description: bad request, No profile photo found for deleting
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: No profile photo found for deleting
+        401:
+          description: bad request, Either token expired or invalid, please authenticate
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: Either token expired or invalid, please authenticate
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: error
+                  message:
+                    type: string
+                    example: error message
